--- a/express/mini-message-board/package.json
+++ b/express/mini-message-board/package.json
@@ -1,8 +1,10 @@
 {
   "name": "mini-message-board",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",              
   "scripts": {
+    "start": "node app.js",
+    "build": "echo 'Build step skipped'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
