--- a/football-players-inventory/.env
+++ b/football-players-inventory/.env
@@ -1,4 +1,4 @@
 DEVELOPMENT=false
-POSTGRES_URI_DEV="postgres://postgres:123456789@localhost:5433/top_users"
-POSTGRES_URI_PROD="postgresql://ukasha:M59RvFZqrtRQ54nsMF5d1WfX8wK7HAD7@dpg-d3dv9thr0fns73dj0mgg-a.oregon-postgres.render.com/mydatabase_92tu?ssl=true"
+POSTGRES_URI_DEV=""
+POSTGRES_URI_PROD=""
 ADMIN_PASSWORD=1234
