--- a/members-only-main/package.json
+++ b/members-only-main/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "my-inventory-management",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "npx tailwindcss -i input.css -o public/styles.css",
+    "start": "node app.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
