--- a/hello-prisma/package.json
+++ b/hello-prisma/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "prisma": "^6.17.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.17.0"
   }
 }
