--- a/blog-api-backend/package.json
+++ b/blog-api-backend/package.json
@@ -13,5 +13,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.18.0"
   }
 }
